--- a/app/javascript/styles/chillstep/variables.scss
+++ b/app/javascript/styles/chillstep/variables.scss
@@ -25,5 +25,5 @@ $dark-text-color: #867ab9;
 $action-button-color: #74b8c4;
 
 $inverted-text-color: #597264 !default;
-$lighter-text-color: #f0ded0 !default;
+$lighter-text-color: #594461 !default;
 $light-text-color: #444b5d;
