--- a/app/javascript/styles/synthwave/variables.scss
+++ b/app/javascript/styles/synthwave/variables.scss
@@ -2,10 +2,10 @@
 $black: #000000;
 $white: #ffffff;
 
-$classic-base-color: #282c37;
-$classic-primary-color: #e0b9db;
-$classic-secondary-color: #f1f1f1;
-$classic-highlight-color: #da8a13;
+$classic-base-color: #a6abbb;
+$classic-primary-color: #f372e2;
+$classic-secondary-color: #011929;
+$classic-highlight-color: #e342f8;
 
 // Differences
 $success-green: #3c754d;
@@ -14,19 +14,16 @@ $base-overlay-background: $white !default;
 $valid-value-color: $success-green !default;
 
 $ui-base-color: $classic-secondary-color !default;
-$ui-base-lighter-color: #515961;
+$ui-base-lighter-color: #4e7399;
 $ui-primary-color: #ff50a8;
 $ui-secondary-color: $classic-base-color !default;
-$ui-highlight-color: #fff12e;
+$ui-highlight-color: #ff2e62;
 
-$primary-text-color: $black !default;
+$primary-text-color: $white !default;
 $darker-text-color: $classic-base-color !default;
-$dark-text-color: #444b5d;
-$action-button-color: #606984;
+$dark-text-color: #a355b3;
+$action-button-color: #bd9ac4;
 
 $inverted-text-color: $black !default;
 $lighter-text-color: $classic-base-color !default;
 $light-text-color: #444b5d;
-
-//Newly added colors
-$account-background-color: $white !default;
