Working on GIF Picker

--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -24,3 +24,6 @@
 @import 'mastodon/dashboard';
 @import 'mastodon/rtl';
 @import 'mastodon/accessibility';
+
+// Radical Additions
+@import 'radical/gif_picker';
