Gif Picker Refinements

--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -25,5 +25,5 @@
 @import 'mastodon/rtl';
 @import 'mastodon/accessibility';
 
-// Radical Additions
+// Radical Town Extensions
 @import 'radical/gif_picker';
