--- a/app/javascript/styles/synthwave/diff.scss
+++ b/app/javascript/styles/synthwave/diff.scss
@@ -8,8 +8,14 @@ body {
 }
 
 .column {
-  width: 380px;
+  padding: 0;
 }
+
+@media screen and (min-width: 600px) {
+  .column {
+      width: 380px;
+  }
+} 
 
 .column-header {
   color: $black;
