Added progressive gif loading.

--- a/app/javascript/styles/radical/gif_picker.scss
+++ b/app/javascript/styles/radical/gif_picker.scss
@@ -61,7 +61,7 @@
 }
 
 .gif-picker-preview {
-  background-color: $white;
+  background-color: $ui-primary-color;
   display: block;
   border: 3px solid $white;
   flex: 0;
