More work on the demogorgon theme.

--- a/app/javascript/styles/demogorgon.scss
+++ b/app/javascript/styles/demogorgon.scss
@@ -1,5 +1,5 @@
 @import 'demogorgon/variables';
 @import 'application';
 @import 'fonts/lato';
-@import 'fonts/benguiat-bold';
+@import 'fonts/benguiat';
 @import 'demogorgon/diff';
