--- a/app/javascript/styles/demogorgon/variables.scss
+++ b/app/javascript/styles/demogorgon/variables.scss
@@ -17,12 +17,12 @@ $ui-base-color: $black !default;
 $ui-base-lighter-color: #2d3b41;
 $ui-primary-color: #1c2627;
 $ui-secondary-color: $classic-base-color !default;
-$ui-highlight-color: #e66262;
+$ui-highlight-color: #fa3636;
 
 $primary-text-color: $white !default;
 $darker-text-color: $classic-base-color !default;
 $dark-text-color: #615c5c;
-$action-button-color: #cc7171;
+$action-button-color: #71a3cc;
 
 $inverted-text-color: $black !default;
 $lighter-text-color: $classic-base-color !default;
