Added Markdown support

--- a/app/javascript/styles/radical/common.scss
+++ b/app/javascript/styles/radical/common.scss
@@ -21,3 +21,11 @@
 .radical-loading-pulse {
   animation: highlight-pulse 1s ease-in-out infinite;
 }
+
+em {
+  font-style: italic;
+}
+
+strong {
+  font-weight: bold;
+}
