--- a/app/javascript/styles/radical/common.scss
+++ b/app/javascript/styles/radical/common.scss
@@ -29,3 +29,19 @@ em {
 strong {
   font-weight: bold;
 }
+
+.column-relaxed {
+  @media screen and (min-width: 600px) {
+    .column {
+        width: 380px;
+    }
+  }
+}
+
+.column-wide {
+  @media screen and (min-width: 600px) {
+    .column {
+        width: 420px;
+    }
+  }
+}
