--- a/app/views/settings/preferences/show.html.haml
+++ b/app/views/settings/preferences/show.html.haml
@@ -56,6 +56,7 @@
   %hr#settings_advanced/
   .fields-group
     = f.input :setting_enable_markdown, as: :boolean, wrapper: :with_label
+    = f.input :setting_column_width, collection: ['column-original', 'column-relaxed', 'column-wide'], label_method: lambda { |width| I18n.t("column_widths.#{width}", default: width) }, wrapper: :with_block_label, include_blank: false
 
   .actions
     = f.button :button, t('generic.save_changes'), type: :submit
