--- a/app/views/auth/registrations/new.html.haml
+++ b/app/views/auth/registrations/new.html.haml
@@ -3,7 +3,13 @@
 
 - content_for :header_tags do
   = render partial: 'shared/og'
-  %script(src="https://www.google.com/recaptcha/api.js?render=#{ENV['RECAPTCHA_SITE_KEY']}") 
+  %script(src="https://www.google.com/recaptcha/api.js?render=#{ENV['RECAPTCHA_SITE_KEY']}" crossorigin="anonymous")
+  :javascript
+    grecaptcha.ready(function() {
+        grecaptcha.execute("#{ENV['RECAPTCHA_SITE_KEY']}", {action: 'signup'}).then(function(token) {
+          
+        });
+    });
 
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = render 'shared/error_messages', object: resource
@@ -26,6 +32,8 @@
     = f.input :password_confirmation, wrapper: :with_label, label: t('simple_form.labels.defaults.confirm_password'), required: true, input_html: { 'aria-label' => t('simple_form.labels.defaults.confirm_password'), :autocomplete => 'off' }
 
   = f.input :invite_code, as: :hidden
+
+  = f.input :recaptcha_token, as: :hidden
 
   %p.hint= t('auth.agreement_html', rules_path: about_more_path, terms_path: terms_path)
 
