Fixed an issue with Webpacker and Benguiat

--- a/app/javascript/styles/fonts/benguiat.scss
+++ b/app/javascript/styles/fonts/benguiat.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Benguiat';
   src: local('Benguiat Bold'),
-    url('../fonts/benguiat/Benguiat Bold.ttf') format('truetype');
+    url('../fonts/benguiat/Benguiat-Bold.ttf') format('truetype');
     font-style: normal;
     font-weight: bold;
 }
@@ -9,7 +9,7 @@
 @font-face {
   font-family: 'Benguiat';
   src: local('Benguiat Normal'),
-    url('../fonts/benguiat/Benguiat Normal.ttf') format('truetype');
+    url('../fonts/benguiat/Benguiat-Normal.ttf') format('truetype');
     font-style: normal;
     font-weight: normal;
 }
@@ -17,7 +17,7 @@
 @font-face {
   font-family: 'Benguiat';
   src: local('Benguiat Bold Italic'),
-    url('../fonts/benguiat/Benguiat Bold Italic font.ttf') format('truetype');
+    url('../fonts/benguiat/Benguiat-Bold-Italic-font.ttf') format('truetype');
     font-style: italic;
     font-weight: bold;
 }
