Fixed themes in basic interface

--- a/app/javascript/styles/demogorgon/diff.scss
+++ b/app/javascript/styles/demogorgon/diff.scss
@@ -1,16 +1,35 @@
-.columns-area {
+div.ui {
   background: rgb(21,21,25);
   background: url('../images/ashes.png'), linear-gradient(180deg, rgba(21,21,25,1) 17%, rgb(20, 38, 46) 44%, rgba(32,41,43,1) 74%, rgba(25,30,36,1) 100%);
   background-blend-mode: soft-light, normal;
   background-repeat: repeat, no-repeat;
 }
 
-body.no-reduce-motion div.columns-area {
+div.ui {
     animation-name: ASHES;
     animation-duration: 120s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
     animation-direction: alternate;
+}
+
+.columns-area__panels {
+  background: rgb(21,21,25);
+  background: url('../images/ashes.png'), linear-gradient(180deg, rgba(21,21,25,1) 17%, rgb(20, 38, 46) 44%, rgba(32,41,43,1) 74%, rgba(25,30,36,1) 100%);
+  background-blend-mode: soft-light, normal;
+  background-repeat: repeat, no-repeat;
+}
+
+body.no-reduce-motion div.columns-area__panels {
+    animation-name: ASHES;
+    animation-duration: 120s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-direction: alternate;
+}
+
+.compose-panel {
+  background: rgba(0, 0, 0, 0.5);
 }
 
 div[aria-label="Home"] {
@@ -55,6 +74,11 @@ div[aria-label="List"] {
   color: $black;
   text-shadow: 1px 1px 8px $ui-highlight-color;
   -webkit-text-stroke: 0.02em $ui-highlight-color;
+}
+
+div.columns-area--mobile > div.column {
+  width: 95%;
+  height: 98%;
 }
 
 @media screen and (min-width: 631px) {
