--- a/app/javascript/styles/synthwave/diff.scss
+++ b/app/javascript/styles/synthwave/diff.scss
@@ -24,6 +24,7 @@ body {
 .scrollable {
   border-left: 1px solid rgb(255, 66, 224);
   border-right: 1px solid rgb(177, 11, 66);
+  border-bottom: 1px solid rgb(116, 66, 255);
 }
 
 .tabs-bar {
